2017-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Minor edits
	* R/RcppExports.R (c_pack): Regenerated

2017-09-05  Travers Ching  <traversc@gmail.com>

	* R/functions.r: camelCase variants msgpackFormat,
	msgpackMap, msgpackPack, msgpackSimplify, mgspackUnpack
	* man/*Rd: Corresponding aliases

2017-09-04  Travers Ching  <traversc@gmail.com>

	* R/functions.r: New functions msgpack_format, msgpack_map,
	msgpack_pack, msgpack_simplify, mgspack_unpack

	* man/mgspack_format.Rd: New documentation
	* man/mgspack_map.Rd: Ditto
	* man/mgspack_pack.Rd: Ditto
	* man/mgspack_simplify.Rd: Ditto
	* man/mgspack_unpack.Rd: Ditto

	* src/c_pack.cpp: Underlying functions addToPack, c_pack
	* src/c_unpack.cpp: Underlying function c_unpack

	* tests/tests.r: New tests

	* vignette/vignette.rmd: New vignette
	* vignette/msgpack_flowchart.*: Supporting files

2017-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/msgpack/: Updated to MsgPack 2.1.5

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Update travis.yml to use run.sh

2017-06-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/example1.cpp: Altered to permit compilation on Windows
	* src/example2.cpp: Idem

	* DESCRIPTION (OS_type): Constraint removed

2017-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated now that RcppMsgPack is on CRAN

2017-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION(Version): Version 0.1.1

	* inst/include/msgpack: Updated to upstream release 1.4.2

	* inst/AUTHORS: Added

	* DESCRIPTION(OS_type): Set to 'unix'

	* README.md: Use alternates for img.shields.io GPL-2+ badges
	* rcppmsgpack.Rproj: Added for RStudio

2016-04-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: (drat release only) Version 0.1.0

	* DESCRIPTION: One more edit about status and copyright,
	* README.ndL Ditto
