@@ -1,3 +1,9 @@
+2017-09-07  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.2.0
+
+	* tests/tests.r: Condition one test out on Windows
+
 2017-09-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* NAMESPACE: Minor edits
